# recol

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  fetch.sh  fetch_colorschemes.sh  note.txt
recol-lib/: Cargo.toml
recol-lib/src/: adjustments.rs  collection.rs  color.rs  error.rs  fuzzy.rs  lib.rs  theme.rs
src/: cli.rs  collection.rs  color.rs  converter.rs  font.rs  interactive.rs  main.rs  models.rs  store.rs  templ.rs  theme.rs  tmpstore.rs  utils.rs
src/collection/: build.rs  converter.rs  mod.rs  theme.rs
src/models/: alacritty.rs  mod.rs
src/targets/: alacritty.rs  ghostty.rs  mod.rs  nvim.rs  vim.rs  wezterm.rs
