[package]
name = "recol"
version = "0.1.3"
edition = "2024"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
fastrand = "2"
strsim = "0.11"
