[package]
name = "recol"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "CLI utility for terminal and Neovim theme switching"
repository = "https://github.com/nlkli/recol"
homepage = "https://github.com/nlkli/recol"
readme = "README.md"
keywords = ["cli", "terminal", "theme", "colorscheme", "neovim", "alacritty", "ghostty"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
recol-lib = { path = "./recol-lib" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1"
fastrand = "2"

[build-dependencies]
recol-lib = { path = "./recol-lib" }
