[package]
name = "recol"
version = "0.1.9"
edition = "2021"
license = "MIT"
description = "CLI utility for terminal and Neovim theme switching"
repository = "https://github.com/nlkli/recol"
homepage = "https://github.com/nlkli/recol"
readme = "README.md"
keywords = ["cli", "terminal", "theme", "colorscheme", "neovim", "alacritty", "ghostty", "wezterm"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
debug = true
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[dependencies]
recol-lib = { path = "./recol-lib" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
serde_json = "1"
fastrand = "2"
crossterm = { version = "0.29", default-features = false, features = ["events"] }

[build-dependencies]
recol-lib = { path = "./recol-lib" }
